--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="#skills">Skills</a>
       </li>
       <li>
-        <a href="#contact">Contact</a>
+        <a href="#social">Social</a>
       </li>
     </ul>
   </header>
@@ -151,7 +151,7 @@
   <!-- End #skills -->
 
   <footer>
-    <div class="container" >
+    <div class="container" id="social">
       <div class="row" >
         <div class=".col-xs-6 social" >
           <ul>
