Updated the resume

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h3>Hexaware Technologies</h3>
         <h4>Senior Software Developer</h4>
         <p> Design, development, and deployment of scalable software solutions for clients, focusing on performance optimization and reliability.Ensuring best practices in software architecture, code quality, and agile methodologies to deliver high-impact projects on time. Developed and maintained key applications in Python, ensuring seamless integration with data pipelines and enhancing user experience through efficient coding practices.<br>
-         Worked on AWS technology such as ECS, EC2, ECR, Batch, SNS, SQS, Lambda, Step Functions, Glue, Service Catalog, Glue Catalog, Redshift, Aurora, DynamoDB, Athena, CLI, CloudFormation using CFT.yaml  and CloudWatch. <br>
+         Worked on AWS technology such as ECS, EC2, ECR, Batch, SNS, SQS, Lambda, Step Functions, Glue, Service Catalog, Glue Catalog, Redshift, Aurora, Redis, DynamoDB, Athena, CLI, CloudFormation using CFT.yaml  and CloudWatch. <br>
          Worked on the existing FastAPI framework to add routes (ASGI was used instead of WSGI for better performance).Worked on Python, relational databases such as Redshift, and web-based framework like Flask and FastAPI in Agile methodology using Jira, Jenkins, and UrbanCode.
         </p>
       </div>
